Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/lto.pas


procedure lto_codegen_set_diagnostic_handler(para1:Tlto_code_gen_t; para2:Tlto_diagnostic_handler_t; para3:pointer);cdecl;external libllvm;
{*
 * Instantiates a code generator.
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 * All modules added using \a lto_codegen_add_module() must have been created
 * in the same context as the codegen.
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_codegen_create:Tlto_code_gen_t;cdecl;external libllvm;
{*
 * Instantiate a code generator in its own context.
 *
 * Instantiates a code generator in its own context.  Modules added via \a
 * lto_codegen_add_module() must have all been created in the same context,
 * using \a lto_module_create_in_codegen_context().
 *
 * \since LTO_API_VERSION=11
  }
function lto_codegen_create_in_local_context:Tlto_code_gen_t;cdecl;external libllvm;
{*
 * Frees all code generator and all memory it internally allocated.
 * Upon return the lto_code_gen_t is no longer valid.
 *
 * \since prior to LTO_API_VERSION=3
  }
procedure lto_codegen_dispose(para1:Tlto_code_gen_t);cdecl;external libllvm;
{*
 * Add an object module to the set of modules for which code will be generated.
 * Returns true on error (check lto_get_error_message() for details).
 *
 * \c cg and \c mod must both be in the same context.  See \a
 * lto_codegen_create_in_local_context() and \a
 * lto_module_create_in_codegen_context().
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_codegen_add_module(cg:Tlto_code_gen_t; mod:Tlto_module_t):Tlto_bool_t;cdecl;external libllvm;
{*
 * Sets the object module for code generation. This will transfer the ownership
 * of the module to the code generator.
 *
 * \c cg and \c mod must both be in the same context.
 *
 * \since LTO_API_VERSION=13
  }
procedure lto_codegen_set_module(cg:Tlto_code_gen_t; mod:Tlto_module_t);cdecl;external libllvm;
{*
 * Sets if debug info should be generated.
 * Returns true on error (check lto_get_error_message() for details).
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_codegen_set_debug_model(cg:Tlto_code_gen_t; para2:Tlto_debug_model):Tlto_bool_t;cdecl;external libllvm;
{*
 * Sets which PIC code model to generated.
 * Returns true on error (check lto_get_error_message() for details).
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_codegen_set_pic_model(cg:Tlto_code_gen_t; para2:Tlto_codegen_model):Tlto_bool_t;cdecl;external libllvm;
{*
 * Sets the cpu to generate code for.
 *
 * \since LTO_API_VERSION=4
  }
procedure lto_codegen_set_cpu(cg:Tlto_code_gen_t; cpu:Pchar);cdecl;external libllvm;
{*
 * Sets the location of the assembler tool to run. If not set, libLTO
 * will use gcc to invoke the assembler.
 *
 * \since LTO_API_VERSION=3
  }
procedure lto_codegen_set_assembler_path(cg:Tlto_code_gen_t; path:Pchar);cdecl;external libllvm;
{*
 * Sets extra arguments that libLTO should pass to the assembler.
 *
 * \since LTO_API_VERSION=4
  }
procedure lto_codegen_set_assembler_args(cg:Tlto_code_gen_t; args:PPchar; nargs:longint);cdecl;external libllvm;
{*
 * Adds to a list of all global symbols that must exist in the final generated
 * code. If a function is not listed there, it might be inlined into every usage
 * and optimized away.
 *
 * \since prior to LTO_API_VERSION=3
  }
procedure lto_codegen_add_must_preserve_symbol(cg:Tlto_code_gen_t; symbol:Pchar);cdecl;external libllvm;
{*
 * Writes a new object file at the specified path that contains the
 * merged contents of all modules added so far.
 * Returns true on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=5
  }
function lto_codegen_write_merged_modules(cg:Tlto_code_gen_t; path:Pchar):Tlto_bool_t;cdecl;external libllvm;
{*
 * Generates code for all added modules into one native object file.
 * This calls lto_codegen_optimize then lto_codegen_compile_optimized.
 *
 * On success returns a pointer to a generated mach-o/ELF buffer and
 * length set to the buffer size.  The buffer is owned by the
 * lto_code_gen_t and will be freed when lto_codegen_dispose()
 * is called, or lto_codegen_compile() is called again.
 * On failure, returns NULL (check lto_get_error_message() for details).
 *
 * \since prior to LTO_API_VERSION=3
  }
function lto_codegen_compile(cg:Tlto_code_gen_t; length:Psize_t):pointer;cdecl;external libllvm;
{*
 * Generates code for all added modules into one native object file.
 * This calls lto_codegen_optimize then lto_codegen_compile_optimized (instead
 * of returning a generated mach-o/ELF buffer, it writes to a file).
 *
 * The name of the file is written to name. Returns true on error.
 *
 * \since LTO_API_VERSION=5
  }
function lto_codegen_compile_to_file(cg:Tlto_code_gen_t; name:PPchar):Tlto_bool_t;cdecl;external libllvm;
{*
 * Runs optimization for the merged module. Returns true on error.
 *
 * \since LTO_API_VERSION=12
  }
function lto_codegen_optimize(cg:Tlto_code_gen_t):Tlto_bool_t;cdecl;external libllvm;
{*
 * Generates code for the optimized merged module into one native object file.
 * It will not run any IR optimizations on the merged module.
 *
 * On success returns a pointer to a generated mach-o/ELF buffer and length set
 * to the buffer size.  The buffer is owned by the lto_code_gen_t and will be
 * freed when lto_codegen_dispose() is called, or
 * lto_codegen_compile_optimized() is called again. On failure, returns NULL
 * (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=12
  }
function lto_codegen_compile_optimized(cg:Tlto_code_gen_t; length:Psize_t):pointer;cdecl;external libllvm;
{*
 * Returns the runtime API version.
 *
 * \since LTO_API_VERSION=12
  }
function lto_api_version:dword;cdecl;external libllvm;
{*
 * Parses options immediately, making them available as early as possible. For
 * example during executing codegen::InitTargetOptionsFromCodeGenFlags. Since
 * parsing shud only happen once, only one of lto_codegen_debug_options or
 * lto_set_debug_options should be called.
 *
 * This function takes one or more options separated by spaces.
 * Warning: passing file paths through this function may confuse the argument
 * parser if the paths contain spaces.
 *
 * \since LTO_API_VERSION=28
  }
procedure lto_set_debug_options(options:PPchar; number:longint);cdecl;external libllvm;
{*
 * Sets options to help debug codegen bugs. Since parsing shud only happen once,
 * only one of lto_codegen_debug_options or lto_set_debug_options
 * should be called.
 *
 * This function takes one or more options separated by spaces.
 * Warning: passing file paths through this function may confuse the argument
 * parser if the paths contain spaces.
 *
 * \since prior to LTO_API_VERSION=3
  }
procedure lto_codegen_debug_options(cg:Tlto_code_gen_t; para2:Pchar);cdecl;external libllvm;
{*
 * Same as the previous function, but takes every option separately through an
 * array.
 *
 * \since prior to LTO_API_VERSION=26
  }
(* Const before abstract_declarator ignored *)
procedure lto_codegen_debug_options_array(cg:Tlto_code_gen_t; para2:PPchar; number:longint);cdecl;external libllvm;
{*
 * Initializes LLVM disassemblers.
 * FIXME: This doesn't really belong here.
 *
 * \since LTO_API_VERSION=5
  }
procedure lto_initialize_disassembler;cdecl;external libllvm;
{*
 * Sets if we should run internalize pass during optimization and code
 * generation.
 *
 * \since LTO_API_VERSION=14
  }
procedure lto_codegen_set_should_internalize(cg:Tlto_code_gen_t; ShouldInternalize:Tlto_bool_t);cdecl;external libllvm;
{*
 * Set whether to embed uselists in bitcode.
 *
 * Sets whether \a lto_codegen_write_merged_modules() should embed uselists in
 * output bitcode.  This should be turned on for all -save-temps output.
 *
 * \since LTO_API_VERSION=15
  }
procedure lto_codegen_set_should_embed_uselists(cg:Tlto_code_gen_t; ShouldEmbedUselists:Tlto_bool_t);cdecl;external libllvm;
{* Opaque reference to an LTO input file  }
type
  Plto_input_t = ^Tlto_input_t;
  Tlto_input_t = PLLVMOpaqueLTOInput;
{*
  * Creates an LTO input file from a buffer. The path
  * argument is used for diagnotics as this function
  * otherwise does not know which file the given buffer
  * is associated with.
  *
  * \since LTO_API_VERSION=24
   }

function lto_input_create(buffer:pointer; buffer_size:Tsize_t; path:Pchar):Tlto_input_t;cdecl;external libllvm;
{*
  * Frees all memory internally allocated by the LTO input file.
  * Upon return the lto_module_t is no longer valid.
  *
  * \since LTO_API_VERSION=24
   }
procedure lto_input_dispose(input:Tlto_input_t);cdecl;external libllvm;
{*
  * Returns the number of dependent library specifiers
  * for the given LTO input file.
  *
  * \since LTO_API_VERSION=24
   }
function lto_input_get_num_dependent_libraries(input:Tlto_input_t):dword;cdecl;external libllvm;
{*
  * Returns the ith dependent library specifier
  * for the given LTO input file. The returned
  * string is not null-terminated.
  *
  * \since LTO_API_VERSION=24
   }
function lto_input_get_dependent_library(input:Tlto_input_t; index:Tsize_t; size:Psize_t):Pchar;cdecl;external libllvm;
{*
 * Returns the list of libcall symbols that can be generated by LTO
 * that might not be visible from the symbol table of bitcode files.
 *
 * \since prior to LTO_API_VERSION=25
  }
function lto_runtime_lib_symbols_list(size:Psize_t):^Pchar;cdecl;external libllvm;
{*
 * @ // endgoup LLVMCLTO
 * @defgroup LLVMCTLTO ThinLTO
 * @ingroup LLVMC
 *
 * @
  }
{*
 * Type to wrap a single object returned by ThinLTO.
 *
 * \since LTO_API_VERSION=18
  }
type
  PLTOObjectBuffer = ^TLTOObjectBuffer;
  TLTOObjectBuffer = record
      Buffer : Pchar;
      Size : Tsize_t;
    end;
{*
 * Instantiates a ThinLTO code generator.
 * Returns NULL on error (check lto_get_error_message() for details).
 *
 *
 * The ThinLTOCodeGenerator is not intended to be reuse for multiple
 * compilation: the model is that the client adds modules to the generator and
 * ask to perform the ThinLTO optimizations / codegen, and finally destroys the
 * codegenerator.
 *
 * \since LTO_API_VERSION=18
  }
